Soporte para Chromecast y encodeo en vivo.

--- a/nekumo/servers/web/static/src/web/css/base.css
+++ b/nekumo/servers/web/static/src/web/css/base.css
@@ -144,6 +144,9 @@ md-input-container.md-dark-theme-theme label {
   border-radius: 3px 3px 0 0;
   box-shadow: 0 1px rgba(255, 255, 255, 0.1); }
 
+.md-open-menu-container {
+  position: absolute; }
+
 /* Cabecera */
 header {
   padding-top: 15px;
